Initial refactoring to shared create form
